syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "explorer.proto";
import "operation.proto";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

service BitcoinInterpreterService {
  rpc SaveTransactions(SaveTransactionsRequest) returns (ResultCount) {}
  rpc SaveUnconfirmedTransactions(SaveTransactionsRequest) returns (ResultCount) {}
  rpc GetLastBlocks(GetLastBlocksRequest) returns (GetLastBlocksResult) {}
  rpc RemoveDataFromCursor(DeleteTransactionsRequest) returns (ResultCount) {}
  rpc GetOperations(GetOperationsRequest) returns (GetOperationsResult) {}
  rpc Compute(ComputeRequest) returns (ResultCount) {}
  rpc GetUTXOs(GetUTXOsRequest) returns (GetUTXOsResult) {}
  rpc GetUnconfirmedUTXOs(GetUnconfirmedUTXOsRequest) returns (GetUnconfirmedUTXOsResult) {}
  rpc GetBalance(GetBalanceRequest) returns (CurrentBalance) {}
  rpc GetBalanceHistory(GetBalanceHistoryRequest) returns (GetBalanceHistoryResult) {}
}

// We sort by date
enum SortingOrder {
  DESC = 0;
  ASC = 1;
}

message SaveTransactionsRequest {
  bytes account_id = 1;
  repeated Transaction transactions = 2;
}

message GetLastBlocksRequest {
  bytes account_id = 1;
}

message GetLastBlocksResult {
  repeated Block blocks = 1;
}

message ComputeRequest {
  bytes account_id = 1;
  repeated AccountAddress addresses = 2;
  string coinId = 3;
}

message DeleteTransactionsRequest {
  bytes account_id = 1;
  int64 block_height = 2;
}

message GetOperationsRequest {
  bytes account_id = 1;
  int64 block_height = 2;
  int32 limit = 3;
  int32 offset = 4;
  SortingOrder sort = 5;
}

message GetOperationsResult {
  repeated Operation operations = 1;
  int32 total = 2;
  bool truncated = 3;
}

message GetUnconfirmedOperationsRequest {
  bytes account_id = 1;
}

message GetUnconfirmedOperationsResult {
  repeated Operation operations = 1;
}

message GetUTXOsRequest {
  bytes account_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  SortingOrder sort = 4;
}

message GetUTXOsResult {
  repeated Utxo utxos = 1;
  int32 total = 2;
  bool truncated = 3;
}

message GetUnconfirmedUTXOsRequest {
  bytes account_id = 1;
}

message GetUnconfirmedUTXOsResult {
  repeated Utxo utxos = 1;
}

message GetBalanceRequest {
  bytes account_id = 1;
}

message GetBalanceHistoryRequest {
  bytes account_id = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Timestamp end = 3;
  int32 interval = 4;
}

message GetBalanceHistoryResult {
  repeated BalanceHistory balances = 1;
}

message ResultCount {
  int32 count = 1;
}